[package]
name = "cursor-locker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = { git = "https://github.com/enigo-rs/enigo", version = "0.0.14" }
rdev = { git = "https://github.com/Narsil/rdev", version = "0.5.0" }
